fixed overlapping widths

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -70,7 +70,7 @@ button {
 /* helper classes */
 
 .container {
-  width: 1440px;
+  max-width: 1440px;
   height: 805;
   padding-left: 25px;
   padding-right: 25px;
@@ -178,14 +178,7 @@ button {
   // background-color: aquamarine;
   padding-left: 10px;
 }
-.slider__right--column{
-  // background-color: aqua;
-  // margin-right: 30px;
-  position: relative;
-  top: 120px;
-  height: 190px;
-  width: 229px;
-}
+
 .slider__left-element {
   width: 150px;
   position: relative;
@@ -207,7 +200,7 @@ button {
   justify-content: center;
   border-style: groove;
   position: relative;
-  left: 546px;
+  left: 475px;
   top: 40px;
   // background-color: aliceblue;
 }
@@ -216,7 +209,7 @@ button {
   // width: 250px;
   position: relative;
   // right: 50px;
-  top: -20px;
+  top: 169px;
   // background-color: #00ffff; 
 }
 .slider__left-header {
